<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizActivity" >

    <!-- Question -->

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic" />
    <!-- Question -->


    <!-- Answers -->
    <RadioGroup
        android:id="@+id/answerRadioButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/questionText"
        android:layout_alignBottom="@id/submitAnswerButton"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/answerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/answerOne"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/answerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answerTwo"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/answerThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answerThree"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/answerFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answerFour"
            android:textSize="12sp" />
    </RadioGroup>
    
    <Button
        android:id="@+id/submitAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeRemaining"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:text="@string/answerButton" />
    <!-- Answers -->


    <!-- Time Remaining -->
    <TextView
        android:id="@+id/timeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/timeRemaining"
        android:textSize="12sp" />
    <!-- Time Remaining -->

</RelativeLayout>